디자인보드

--- a/front/designBoard.html
+++ b/front/designBoard.html
@@ -14,6 +14,11 @@
     <title>Document</title>
 </head>
 <body style="padding: 16px;">
+
+    <div class="custom-shadow font-bold custom-modal custom-modal-body">커스텀 그림자</div>
+
+    <hr>
+
     
     <input type="checkbox">
     <input class="form-check-input" type="checkbox">
@@ -66,7 +71,7 @@
     <hr>
 
     <div style="display: flex; align-items: center;">
-        <img src="profileDummy.png" class="profile-image">
+        <img src="profileDummy.png" class="profile-image" style="width: 30px;">
         <span style="margin-left: 10px;">: profile-image</span>
     </div>
 
@@ -76,53 +81,53 @@
     
     <hr>
 
-    <button class="custom-btn btn-round btn-purple1">둥근버튼: btn-round btn-purple1</button>
-    <button class="custom-btn btn-purple1">각진버튼: btn btn-purple1</button>
+    <button class="custom-btn btn-round btn-purple1">둥근버튼: "custom-btn btn-round btn-purple1</button>
+    <button class="custom-btn btn-purple1">각진버튼:custom-btn btn btn-purple1</button>
 
     <hr>
 
-    <button class="custom-btn btn-round btn-purple1-secondary">둥근버튼: btn-round btn-purple1-secondary</button>
-    <button class="custom-btn btn-purple1-secondary">각진버튼: btn-purple1-secondary</button>
+    <button class="custom-btn btn-round btn-purple1-secondary">둥근버튼:custom-btn  btn-round btn-purple1-secondary</button>
+    <button class="custom-btn btn-purple1-secondary">각진버튼:custom-btn btn-purple1-secondary</button>
 
     <hr>
 
-    <button class="custom-btn btn-round btn-purple1" disabled>둥근버튼(disabled): btn-round btn-purple1</button>
-    <button class="custom-btn btn-purple1" disabled>각진버튼(disabled): btn-purple1</button>
+    <button class="custom-btn btn-round btn-purple1" disabled>둥근버튼(disabled): custom-btn btn-round btn-purple1</button>
+    <button class="custom-btn btn-purple1" disabled>각진버튼(disabled): custom-btn btn-purple1</button>
 
     <hr>
 
-    <button class="custom-btn btn-round btn-purple1-secondary" disabled>둥근버튼(disabled): btn-round btn-purple1-secondary</button>
-    <button class="custom-btn btn-purple1-secondary" disabled>각진버튼(disabled) btn-purple1-secondary</button>
+    <button class="custom-btn btn-round btn-purple1-secondary" disabled>둥근버튼(disabled): custom-btn btn-round btn-purple1-secondary</button>
+    <button class="custom-btn btn-purple1-secondary" disabled>각진버튼(disabled): custom-btn btn-purple1-secondary</button>
 
     <hr>
 
-    <button class="custom-btn btn-round btn-purple2">둥근버튼: btn-round btn-purple2</button>
-    <button class="custom-btn btn-purple2">각진버튼: btn-purple2</button>
+    <button class="custom-btn btn-round btn-purple2">둥근버튼: custom-btn btn-round btn-purple2</button>
+    <button class="custom-btn btn-purple2">각진버튼: custom-btn btn-purple2</button>
 
     <hr>
 
-    <button class="custom-btn btn-round btn-purple2" disabled>둥근버튼(disabled): btn-round btn-purple2</button>
-    <button class="custom-btn btn-purple2" disabled>각진버튼(disabled): btn-purple2</button>
+    <button class="custom-btn btn-round btn-purple2" disabled>둥근버튼(disabled): custom-btn btn-round btn-purple2</button>
+    <button class="custom-btn btn-purple2" disabled>각진버튼(disabled): custom-btn btn-purple2</button>
 
     <hr>
 
-    <button class="custom-btn btn-round btn-purple2-secondary">둥근버튼: btn-round btn-purple2-secondary</button>
-    <button class="custom-btn btn-purple2-secondary">각진버튼: btn-purple2-secondary</button>
+    <button class="custom-btn btn-round btn-purple2-secondary">둥근버튼: custom-btn btn-round btn-purple2-secondary</button>
+    <button class="custom-btn btn-purple2-secondary">각진버튼: custom-btn btn-purple2-secondary</button>
 
     <hr>
 
-    <button class="custom-btn btn-round btn-purple2-secondary" disabled>둥근버튼(disabled): btn-round btn-purple2-secondary</button>
-    <button class="custom-btn btn-purple2-secondary" disabled>각진버튼(disabled): btn-purple2-secondary</button>
+    <button class="custom-btn btn-round btn-purple2-secondary" disabled>둥근버튼(disabled): custom-btn btn-round btn-purple2-secondary</button>
+    <button class="custom-btn btn-purple2-secondary" disabled>각진버튼(disabled): custom-btn btn-purple2-secondary</button>
 
     <hr>
 
-    <button class="custom-btn btn-round btn-gray">둥근버튼: btn-round btn-gray</button>
-    <button class="custom-btn btn-gray">각진버튼: btn-gray</button>
+    <button class="custom-btn btn-round btn-gray">둥근버튼: custom-btn btn-round btn-gray</button>
+    <button class="custom-btn btn-gray">각진버튼: custom-btn btn-gray</button>
 
     <hr>
 
-    <button class="custom-btn btn-round btn-gray" disabled>둥근버튼(disabled): btn-round btn-gray</button>
-    <button class="custom-btn btn-gray" disabled>각진버튼(disabled): btn-gray</button>
+    <button class="custom-btn btn-round btn-gray" disabled>둥근버튼(disabled): custom-btn btn-round btn-gray</button>
+    <button class="custom-btn btn-gray" disabled>각진버튼(disabled): custom-btn btn-gray</button>
 
 
     <!-- 부트스트랩 js -->
